--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -36,12 +38,14 @@ android {
         }
     }
 }
+dependencies {
+    implementation platform('com.google.firebase:firebase-bom:33.6.0') // Example Firebase dependency
+    // Add other Firebase dependencies here
+}
 
 flutter {
     source = "../.."
 }
-
-
 
 // android/app/build.gradle
 
