--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,18 +1,32 @@
-allprojects {
+buildscript {
     repositories {
         google()
-        mavenCentral()
+        jcenter() // Deprecated but still used by many legacy projects
+    }
+    dependencies {
+        // Corrected version and format for the Google Services plugin
+        classpath 'com.google.gms:google-services:4.4.2' // Make sure this version is compatible with your Gradle version
+    }
+}
+
+allprojects {
+    repositories {
+        google() // Use Google's Maven repository for Firebase dependencies
+        mavenCentral() // Ensure access to Maven Central for other dependencies
     }
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+
 subprojects {
     project.evaluationDependsOn(":app")
 }
 
+// Register a clean task to delete the build directory
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
